--- a/industrial_extrinsic_cal/yaml/test1_caljob_def.yaml
+++ b/industrial_extrinsic_cal/yaml/test1_caljob_def.yaml
@@ -4,13 +4,14 @@ scenes:
 -
      scene_id: 0
      trigger_type: 1
+     trigger: NO_WAIT_TRIGGER
      observations: 
      -
           camera: Asus1
-          target: CircleGrid
+          target: Checkerboard
           roi_x_min: 0
-          roi_x_max: 400
+          roi_x_max: 640
           roi_y_min: 0
-          roi_y_max: 430
+          roi_y_max: 480
 
 optimization_parameters: xx
