--- a/industrial_extrinsic_cal/yaml/test1_camera_def.yaml
+++ b/industrial_extrinsic_cal/yaml/test1_camera_def.yaml
@@ -3,10 +3,12 @@
 static_cameras:
  -
     camera_name: Asus1
-    camera_optical_frame: /ns1_kinect_rgb_optical_frame
+    camera_optical_frame: /ns1_kinect_link
     camera_intermediate_frame: /ns1_kinect_link
     image_topic: /ns1_kinect/rgb/image_rect_color
     angle_axis_ax: 1.0
+    trigger: NO_WAIT_TRIGGER
+    transform_interface: ros_camera_bti 
     angle_axis_ay: 1.1
     angle_axis_az: 1.2
     position_x: 1.3
