--- a/industrial_extrinsic_cal/yaml/test2_camera_def.yaml
+++ b/industrial_extrinsic_cal/yaml/test2_camera_def.yaml
@@ -6,6 +6,8 @@ static_cameras:
     camera_optical_frame: /ns1_kinect_rgb_optical_frame
     camera_intermediate_frame: /ns1_kinect_link
     image_topic: /ns1_kinect/rgb/image_rect_color
+    trigger: NO_WAIT_TRIGGER
+    transform_interface: ros_camera_bti
     angle_axis_ax: 1.0
     angle_axis_ay: 1.1
     angle_axis_az: 1.2
@@ -26,6 +28,8 @@ static_cameras:
     camera_optical_frame: /ns2_kinect_rgb_optical_frame
     camera_intermediate_frame: /ns2_kinect_link
     image_topic: /ns2_kinect/rgb/image_rect_color
+    trigger: NO_WAIT_TRIGGER
+    transform_interface: ros_camera_bti
     angle_axis_ax: 1.990
     angle_axis_ay: 1.001
     angle_axis_az: 1.992
